<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alvarosantisteban.myappportfolio.MainActivity" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_apps_title"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/main_movies_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_movies_title"
            style="@style/StyledButton"
            android:onClick="onAppButtonClicked"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/main_stock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_stock_title"
            style="@style/StyledButton"
            android:onClick="onAppButtonClicked"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/main_bigger_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_bigger_title"
            style="@style/StyledButton"
            android:onClick="onAppButtonClicked"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/main_material_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_material_title"
            style="@style/StyledButton"
            android:onClick="onAppButtonClicked"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/main_ubiquitous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_ubiquitous_title"
            style="@style/StyledButton"
            android:onClick="onAppButtonClicked"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/main_capstone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_capstone_title"
            style="@style/StyledButton"
            android:onClick="onAppButtonClicked"/>
    </TableRow>
</TableLayout>
